# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  deploy.yml  heroku-deploy.yml  python-anywhere-deploy.yml  pythonanywhere-deploy.yml  workflow-pr.yaml  workflow-pr.yml
bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bookstore/templates/: hello_world.html
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/management/commands/: seed.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_order_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
